--- a/style.css
+++ b/style.css
@@ -374,4 +374,38 @@ body {
     font-style: italic;
     color: #aaa;
     opacity: 0.7;
+
+}
+
+/* ================================== */
+/* ==== STYLE RESPONSIVE (MOBILE) ==== */
+/* ================================== */
+
+@media (max-width: 600px) {
+
+    .chat-view .chat-header {
+        padding: 15px;
+    }
+
+    .chat-box {
+        padding: 15px;
+    }
+
+    .chat-input-area {
+        padding: 10px 15px; 
+    }
+
+    #user-input {
+        margin-right: 10px;
+    }
+
+    #send-btn {
+        width: 45px;
+        height: 45px;
+        font-size: 16px;
+    }
+
+    .message {
+        max-width: 90%;
+    }
 }
