--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 100dvh;
     width: 100%;
     padding: 20px;
     box-sizing: border-box;
@@ -166,7 +166,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 100dvh;
     width: 100%;
     text-align: center;
     padding: 20px;
@@ -233,7 +233,7 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
+    height: 100dvh;
     background-color: #1a1a1a;
     display: none; /* Awalnya tersembunyi */
     flex-direction: column;
@@ -409,4 +409,3 @@ body {
         max-width: 90%;
     }
 }
-
